Width 100% the spans to avoid small whitespace wraps

--- a/src/_styles/global.css
+++ b/src/_styles/global.css
@@ -738,8 +738,10 @@ a {
   bottom: -0.4rem;
   left: 50%;
   transform: translate(-50%, 100%);
+  width: 100%;
   font-size: 1.4rem;
   line-height: 0.8;
+  outline: 1px solid red;
 }
 #scrollbar-container {
   position: relative;
